@@ -448,7 +448,7 @@ STDMETHODIMP CShellExt::QueryContextMenu(HMENU hMenu, UINT indexMenu, UINT idCmd
   {
     if(m_pDeskClicked)
     {
-      if (GetCtrlAsAdmin)
+      if ((!IsWin7)&&(GetCtrlAsAdmin))
       {
         //right click target is folder background
         InsertMenu(hMenu, indexMenu++, MF_SEPARATOR|MF_BYPOSITION, NULL, NULL);
@@ -459,7 +459,7 @@ STDMETHODIMP CShellExt::QueryContextMenu(HMENU hMenu, UINT indexMenu, UINT idCmd
     if(m_ClickFolderName[0])
     {
       BOOL bCmd=GetCmdAsAdmin;
-      BOOL bExp=GetExpAsAdmin;
+      BOOL bExp=(!IsWin7)&& GetExpAsAdmin;
       if (bExp || bCmd)
         InsertMenu(hMenu, indexMenu++, MF_SEPARATOR|MF_BYPOSITION, NULL, NULL);
       //right click target is folder background
